syntax = "proto3";

package hsmd;

service Hsmd {
  // Trivial call to test connectivity
  rpc Ping (PingRequest)
      returns (PingReply);

  rpc SignerStream(stream SignerResponse)
      returns (stream SignerRequest);
}

message PingRequest {
  string message = 1;
}

message PingReply {
  string message = 1;
}

message SignerResponse {
  uint64 request_id = 1;
  bytes message = 2;
  string error = 3;
}

message HsmRequestContext {
  bytes peer_id = 1;
  uint64 dbid = 2;
  uint64 capabilities = 3;
}

message SignerRequest {
  uint64 request_id = 1;
  HsmRequestContext context = 2;
  bytes message = 3;
}
